fix overflow issue

--- a/src/Components/HeroBanner/styles.css
+++ b/src/Components/HeroBanner/styles.css
@@ -66,12 +66,10 @@ input {
   position: relative;
   margin-top: 100px;
   background-color: rgba(4, 50, 55, 0.649);
-
 }
 .background {
   background-image: url(../../../src/assets/images/background.jpg);
   background-repeat: no-repeat;
-
 }
 .text-element {
   margin: 20px;
@@ -81,12 +79,12 @@ input {
   font-size: larger;
   color: white;
   margin-bottom: 1.1rem;
-  text-shadow: 2px 3px rgba(36, 36, 36, 0.4)
+  text-shadow: 2px 3px rgba(36, 36, 36, 0.4);
 }
 .text-element p {
   padding: 10px 0 0 0;
   color: white;
-  text-shadow: 2px 3px rgba(25, 25, 25, 0.4)
+  text-shadow: 2px 3px rgba(25, 25, 25, 0.4);
 }
 .image-element {
   min-width: 30%;
@@ -94,9 +92,8 @@ input {
   transition: all 0.5s ease-out;
 }
 .brightness {
-  filter: brightness(0.8)
+  filter: brightness(0.8);
 }
-
 
 /* Small devices (landscape phones, 576px and up) */
 
@@ -122,13 +119,14 @@ input {
     left: 10%;
     min-width: 50%;
     bottom: 0;
+  
   }
 
   .image-element img {
-    max-height: 80%;
+    max-height: 70%;
     position: relative;
-    top: 20%;
-    right: 15%;
+    top: 30%;
+      right: 30px;
     transition: all 0.5s ease-out;
   }
 }
@@ -156,14 +154,14 @@ input {
     bottom: 0;
     right: 5%;
     transition: all 0.5s ease-out;
-  }
-
+  
+}
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .parent {
-    margin-top:0px;
+    margin-top: 0px;
   }
   .text-element {
     margin: 20px;
